# rox

./: .gitignore  Cargo.toml  README.md  test.rox
cli/: Cargo.toml
cli/src/: main.rs
core/src/: callable.rs  class.rs  interpreter.rs  lib.rs  parser.rs  resolver.rs  rox.rs  scanner.rs  types.rs
doubly/: CMakeLists.txt  CMakeLists.txt.in
doubly/include/doubly/: doubly.h
doubly/src/: doubly.c  main.c
doubly/test/: doubly.cpp
examples/: ast_printer.rs  rpn_printer.rs
rlox/: test.lox
rlox/examples/: ast_printer.rs  rpn_printer.rs
rlox/src/: ast.rs  lib.rs  main.rs  parser.rs  printers.rs  scanner.rs  token.rs
rox/: Cargo.toml  README.md  test.rox
rox/examples/: ast_printer.rs  rpn_printer.rs
rox/src/: ast.rs  callable.rs  class.rs  environment.rs  interpreter.rs  lib.rs  main.rs  parser.rs  printers.rs  resolver.rs  scanner.rs  token.rs  types.rs
src/: ast.rs  class.rs  interpreter.rs  lib.rs  resolver.rs
tester/: Cargo.toml
tester/src/: main.rs
tests/: unexpected_character.lox
tests/assignment/: grouping.lox  infix_operator.lox  prefix_operator.lox  to_this.lox
tests/class/: empty.lox  inherit_self.lox  local_inherit_other.lox  local_inherit_self.lox  local_reference_self.lox  reference_self.lox
tests/constructor/: call_init_early_return.lox  call_init_explicitly.lox  default.lox  early_return.lox  return_in_nested_function.lox  return_value.lox
tests/field/: get_on_bool.lox  get_on_class.lox  get_on_function.lox  get_on_nil.lox  get_on_num.lox  get_on_string.lox  set_on_bool.lox  set_on_class.lox  set_on_nil.lox  (+3 more)
xor/: Cargo.toml
(+82 files in other folders)
